@@ -1,5 +1,9 @@
 New entries should be added at the top
 
+2005-03-10 remove GraphicsContextPS.set_linestyle()
+	   and GraphicsContextSVG.set_linestyle() since they do no more than 
+           the base class GraphicsContext.set_linestyle() - SC
+
 2005-03-09 Refactored contour functionality into dedicated module
 
 2005-03-09 Added Eric's contourf updates and Nadia's clabel functionality
